// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "ucenter.grpc.module";
option java_outer_classname = "ModuleProto";
option objc_class_prefix = "UCENTER";

// 定义包名，避免命名冲突
package ucenter;

// 定义服务
service Module {
  rpc getModuleList (ModuleListRequest) returns (ModuleListResponse) {}
  rpc addModule (AddModuleRequest) returns (ModuleSchema) {}
  rpc deleteModule (DeleteRequest) returns (DeleteResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message ModuleListRequest {
  string clientCode = 1;
}

message ModuleListResponse {
  repeated ModuleSchema modules = 1;
}

message AddModuleRequest {
  OperatorSchema curUserInfo = 1;
  ModuleSchema module = 2;
}

message DeleteRequest {
  OperatorSchema curUserInfo = 1;
  string moduleCode = 2;
}

message DeleteResponse {
  bool deleted = 1;
}

message OperatorSchema {
  string userCode = 1;
  string realName = 2;
}

message ModuleSchema {
  string moduleCode = 1;
  string moduleName = 2;
  int32 status = 3;
  uint32 authType = 4;
  string clientCode = 5;
}